<resources>
    <string name="app_name">OSChina</string>

    <string name="title_section1">技术问答</string>
    <string name="title_section2">开源软件</string>
    <string name="title_section3">博客区</string>
    <string name="title_section4">Git客户端</string>

    <string name="bottom_bar_1">综合</string>
    <string name="bottom_bar_2">动弹</string>
    <string name="bottom_bar_3">发现</string>
    <string name="bottom_bar_4">我</string>

    <string name="bottom_bar_1_title_1">资讯</string>
    <string name="bottom_bar_1_title_2">热点</string>
    <string name="bottom_bar_1_title_3">博客</string>
    <string name="bottom_bar_1_title_4">推荐</string>

    <string name="bottom_bar_2_title_1">最新动弹</string>
    <string name="bottom_bar_2_title_2">热门动弹</string>
    <string name="bottom_bar_2_title_3">我的动弹</string>

    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_note">便签</string>

    <string name="login">登陆</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>

    <string name="user_score">积分</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="actionbar_title_profile">个人中心</string>
    <string name="join_time">加入时间:</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>
    <string name="latest_login_time">最近登录  %s</string>

    <string name="blog">博客</string>
    <string name="information">资料</string>
    <string name="qrcode">二维码</string>
    <string name="message">消息</string>
    <string name="team">团队</string>
    <string name="note">便签</string>
    <string name="bookmarks">收藏夹</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_tweet">弹一弹</string>
    <string name="user_tweet_publish">发布</string>
    <string name="tweet_hint">今天你动弹了吗？</string>

    <string name="action_example">Example action</string>

    <string name="action_back">返回</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登陆</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news_detials">NewsDetialsActivity</string>
    <string name="title_activity_activity_tweet">activity_tweet</string>

    <string name="tweet_details">动弹详情</string>
    <string name="tweet_no_comment">暂无评论</string>

    <string name="refresh_listview_footer_more">20条数据正在载入中</string>
    <string name="refresh_listview_footer_nomore">没有更多</string>
</resources>
