<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/circle_viewpager_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/circle_viewpager_title_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bottom_bar_2_title_1"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_16"/>
        <TextView
            android:id="@+id/circle_viewpager_title_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bottom_bar_2_title_2"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_16"/>
        <TextView
            android:id="@+id/circle_viewpager_title_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bottom_bar_2_title_3"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_size_16"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/circle_viewpager_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/viewpager_cursor" />
    <android.support.v4.view.ViewPager
        android:id="@+id/circle_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </android.support.v4.view.ViewPager>
</LinearLayout>