<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:layout_gravity="bottom"
    android:background="@color/drawer_menu_text"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/bottom_bar_item_1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/bottom_bar_image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar_image_1_select" />

        <TextView
            android:id="@+id/bottom_bar_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_bar_1"
            android:textSize="12sp"
            android:background="@drawable/bottom_bar_text"
            />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/bottom_bar_item_2"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/bottom_bar_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar_image_2_select" />

        <TextView
            android:id="@+id/bottom_bar_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_bar_2"
            android:textSize="12sp"
            android:background="@drawable/bottom_bar_text"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/bottom_bar_item_quick">

        <ImageView
            android:id="@+id/bottom_bar_quick_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bottom_bar_quick"
            />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/bottom_bar_item_3"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/bottom_bar_image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar_image_3_select" />

        <TextView
            android:id="@+id/bottom_bar_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_bar_3"
            android:textSize="12sp"
            android:background="@drawable/bottom_bar_text"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/bottom_bar_item_4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/bottom_bar_image_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar_image_4_select" />

        <TextView
            android:id="@+id/bottom_bar_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bottom_bar_4"
            android:textSize="12sp"
            android:background="@drawable/bottom_bar_text"/>
    </LinearLayout>
</LinearLayout>